# ARC

./: .gitignore  README.md  pyproject.toml
gross/: data-stats.ipynb  gen-data.ipynb
klein/: data-stats.ipynb  gen-data.ipynb
notebooks/mistakes-classification/: requirements.txt  visualize_tasks_and_results.ipynb
notebooks/mistakes-classification/data/: generation_corrects_reloss_rearc_lr3em4_bs64_beam4_train.json  generation_corrects_reloss_rearc_lr3em4_bs64_greedy_train.json  generation_corrects_reloss_rearc_lr3em4_bs64_greedy_val.json
scripts/: run_local.sh
src/data/: arc.py  augment.py  compress.py  dataset.py
src/models/: model.py  tokenizer.py
src/scripts/: classify_errors.py  run_evaluate.py  run_generation.py  run_gpt2.py
src/side/: plot.py
src/train/: __init__.py  evaluate.py  train.py
src/utils/: __init__.py  generate.py  utils.py
