[project]
name = "arc"
version = "0.1.0"
description = "ARC project"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.46.2",
    "wandb>=0.15.0",
    "numpy>=1.20.0",
    "tqdm>=4.65.0",
    "pandas>=2.2.3",
    "datasets>=3.2.0",
    "peft>=0.15.0",
    "matplotlib>=3.10.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
